force-app/main/default/objects/Conflict__c/Conflict__c.object-meta.xml
<CustomObject>
    <label>Conflict</label>
    <pluralLabel>Conflicts</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>CNF-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Conflict</description>
</CustomObject>