force-app/main/default/objects/Conflict__c/fields/AI_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestion__c</fullName>
    <label>AI Suggestion</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>