force-app/main/default/objects/Conflict__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Lookup</type>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Conflicts</relationshipLabel>
    <relationshipName>Conflicts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>