force-app/main/default/objects/Conflict__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
            <value><fullName>AutoResolved</fullName><default>false</default><label>AutoResolved</label></value>
            <value><fullName>ManualResolved</fullName><default>false</default><label>ManualResolved</label></value>
            <value><fullName>Deferred</fullName><default>false</default><label>Deferred</label></value>
            <value><fullName>Ignored</fullName><default>false</default><label>Ignored</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>