force-app/main/default/objects/Conflict__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <type>Text</type>
    <length>255</length>
</CustomField>