force-app/main/default/objects/Conflict__c/fields/Source_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Value__c</fullName>
    <label>Source Value</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>