force-app/main/default/objects/Conflict__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <label>Target Value</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>